vitrail-pg-macros/tests/ui/fail/invalid_default.stderr
error: `@default(autoincrement())` is only supported on `Int` fields
 --> tests/ui/fail/invalid_default.rs:7:24
  |
7 |         id String @id @default(autoincrement())
  |                        ^^^^^^^
